# claude-phasebook

./: MANIFEST.in  README.md  pyproject.toml
framework/phases/: learn.md  plan.md  research.md
framework/rules/: git-integration.md  human-feedback.md  prompt-optimization.md  queue-protocol.md  review-panel-roles.md  strip-semantics.md  task-decomposition.md  workflow-protocol.md
framework/scripts/: phasebook_context.py  phasebook_notify.py  token_usage.py
framework/skills/draft/: SKILL.md
framework/skills/index/: SKILL.md
framework/skills/optimize/: SKILL.md
framework/skills/phasebook/: SKILL.md
framework/skills/review/: SKILL.md
framework/skills/status/: SKILL.md
src/phasebook/: __init__.py  _helpers.py  cli.py  costs_cmd.py  index_cmd.py  init_cmd.py  lint_cmd.py  queue_cmd.py  status_cmd.py  update_cmd.py
src/phasebook/framework/agents/: review-gaps.md  review-panel.md
src/phasebook/framework/phases/: design.md  execute.md
src/phasebook/framework/references/: knowledge-transfer.md
src/phasebook/framework/rules/: obligation-ledger.md  review-cycle.md
src/phasebook/framework/scripts/: external_review.py
src/phasebook/templates/: CLAUDE.md  api_keys.example.json  review_models.json
templates/: api_keys.example.json  reference-data.md  review_models.json  settings.json
